                        \ \ /\ / / _ \ '_ \ / _` | | | |
                         \ V  V /  __/ | | | (_| | |_| |
                          \_/\_/ \___|_| |_|\__,_|\__, |
                                                  |___/
                      synthesizing partners for services
                      http://service-technology.org/wendy


Version 2.5-unreleased
======================

* fixed bug #14782 (see `https://gna.org/bugs/?14782'): smart sending event
  does not handle self loops of inner markings correctly

* added an error message to avoid segmentation faults in case a marking has
  two outgoing transitions with the same synchronous label (see
  `https://gna.org/bugs/?14719')

Version 2.4 (9 November 2009)
=============================

* added target for benchmarks (execute `make bench -C tests')

* implemented new 3-bit representation: at `T' bit is necessary to
  correctly cope with "true"-annotated nodes - renamed `2bits' option to
  `bits'

* removed explicit `std::flush' calls

* colored status messages

* fixed bug #14693 (`https://gna.org/bugs/?14693'): wrong propagation of
  final states yielded wrong results for livelock freedom

Version 2.3 (21 October 2009)
=============================

* knowledge bubbles are finally sorted to avoid duplicates

* implemented first diagnosis functions: the `--diagnosis' parameter
  creates a Dot file which indicates the blacklisted markings

* removed all memory leaks

* removed parameter `--smartSendingEvent': Wendy will always use this
  technique unless `--ignoreUnreceivedMessages' is given

* renamed parameter `--receiveBeforeSend' to `--receivingBeforeSending'

Version 2.2 (16 September 2009)
===============================

* added test cases for checking synchronous communication together with
  livelock freedom and reduction rule "quit as soon as possible"
  (parameter: `--quitAsSoonAsPossible')

* added test cases to test Wendy's integration into Marlene
