@@ -1,6 +1,9 @@
 @heading Version 2.5-unreleased
 @itemize
+@item fixed bug #14798 (see @url{https://gna.org/bugs/?14798}): smart sending is too strict (now fix of bug #14782 is obsolete and is handled with the new implementation)
+
 @item fixed bug #14782 (see @url{https://gna.org/bugs/?14782}): smart sending event does not handle self loops of inner markings correctly
+
 @item added an error message to avoid segmentation faults in case a marking has two outgoing transitions with the same synchronous label (see @url{https://gna.org/bugs/?14719})
 @end itemize
 
