@@ -11,6 +11,10 @@
 Version 2.5-unreleased
 ======================
 
+* fixed bug #14798 (see `https://gna.org/bugs/?14798'): smart sending is
+  too strict (now fix of bug #14782 is obsolete and is handled with the new
+  implementation)
+
 * fixed bug #14782 (see `https://gna.org/bugs/?14782'): smart sending event
   does not handle self loops of inner markings correctly
 
